# QtAutoUpdaterDemo

./: CMakeLists.txt  update.json
.github/workflows/: build-release.yml
installer/: setup.nsi
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
